# certified-multiagent-boundary-adaptation-with-policies

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCE.md  pyproject.toml
certified_marl/: __init__.py
certified_marl/env/: __init__.py  arrivals.py  cs_lstf.py  csgrag.py  domain.py  geometry.py  historical_arrivals.py
certified_marl/metrics/: __init__.py  imbalance.py  panel.py  safety.py  tail.py
certified_marl/models/: __init__.py  flat_actor.py
certified_marl/objectives/: __init__.py  auxiliary_reward.py  reward_normalizer.py  shaping.py
certified_marl/shield/: __init__.py  contracts.py  feasibility_kernel.py  matching.py
certified_marl/trainers/: __init__.py  _common.py  (+1 more)
scripts/: _make_fig_load_sensitivity_bars.py  _make_fig_regime_taxonomy_4pane_v2.py  aggregate_phase2.py  eval_cpac_phase2.py  fetch_chicago_data.py  make_a5_4corner_scale_configs.py  make_fig07_regime_scorecard.py  make_fig_hotspot_density.py  make_fig_hotspot_dispersion.py  make_fig_part1_trilemma_clean.py  make_fig_region_scaling.py  make_fig_rho_tolerance_sweep_clean_s1.py  make_fig_s1_deterministic_result.py  make_hotspot_density_configs.py  make_phase2_figures_v2.py  phase1_master_aggregate.py  prep_chicago_loop4.py  run_experiment.py  scale_chicago_loop4.py  sigspatial_style.py  train_cpac_phase2.py
tests/: test_admission_before_commit.py  test_contracts.py  test_cross_service_attribution.py  test_dynamic_eligibility_regions.py  test_endpoint_disjoint_matching.py  test_handshake_sign.py  test_invariance.py  test_seed_determinism.py  test_shield.py  test_units.py
(+78 files in other folders)
